// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test add event undo and redo 1`] = `
Object {
  "historyStack": Array [
    Object {
      "action": "added",
      "after": Object {
        "angle": 0,
        "backgroundColor": "",
        "clipTo": null,
        "fill": "rgb(0,0,0)",
        "fillRule": "nonzero",
        "flipX": false,
        "flipY": false,
        "globalCompositeOperation": "source-over",
        "height": 0,
        "id": 0,
        "left": 0,
        "opacity": 1,
        "originX": "left",
        "originY": "top",
        "paintFirst": "fill",
        "rx": 0,
        "ry": 0,
        "scaleX": 1,
        "scaleY": 1,
        "shadow": null,
        "skewX": 0,
        "skewY": 0,
        "stroke": null,
        "strokeDashArray": null,
        "strokeDashOffset": 0,
        "strokeLineCap": "butt",
        "strokeLineJoin": "miter",
        "strokeMiterLimit": 4,
        "strokeWidth": 1,
        "top": 0,
        "transformMatrix": null,
        "type": "rect",
        "version": "3.6.3",
        "visible": true,
        "width": 0,
      },
      "before": Array [],
      "id": 0,
    },
  ],
  "id": 1,
  "objects": Array [
    Object {
      "angle": 0,
      "backgroundColor": "",
      "clipTo": null,
      "fill": "rgb(0,0,0)",
      "fillRule": "nonzero",
      "flipX": false,
      "flipY": false,
      "globalCompositeOperation": "source-over",
      "height": 0,
      "id": 0,
      "left": 0,
      "opacity": 1,
      "originX": "left",
      "originY": "top",
      "paintFirst": "fill",
      "rx": 0,
      "ry": 0,
      "scaleX": 1,
      "scaleY": 1,
      "shadow": null,
      "skewX": 0,
      "skewY": 0,
      "stroke": null,
      "strokeDashArray": null,
      "strokeDashOffset": 0,
      "strokeLineCap": "butt",
      "strokeLineJoin": "miter",
      "strokeMiterLimit": 4,
      "strokeWidth": 1,
      "top": 0,
      "transformMatrix": null,
      "type": "rect",
      "version": "3.6.3",
      "visible": true,
      "width": 0,
    },
  ],
  "redoStack": Array [],
  "version": "3.6.3",
}
`;

exports[`test add event undo and redo 2`] = `
Object {
  "historyStack": Array [],
  "id": 1,
  "objects": Array [],
  "redoStack": Array [
    Object {
      "action": "added",
      "after": Object {
        "angle": 0,
        "backgroundColor": "",
        "clipTo": null,
        "fill": "rgb(0,0,0)",
        "fillRule": "nonzero",
        "flipX": false,
        "flipY": false,
        "globalCompositeOperation": "source-over",
        "height": 0,
        "id": 0,
        "left": 0,
        "opacity": 1,
        "originX": "left",
        "originY": "top",
        "paintFirst": "fill",
        "rx": 0,
        "ry": 0,
        "scaleX": 1,
        "scaleY": 1,
        "shadow": null,
        "skewX": 0,
        "skewY": 0,
        "stroke": null,
        "strokeDashArray": null,
        "strokeDashOffset": 0,
        "strokeLineCap": "butt",
        "strokeLineJoin": "miter",
        "strokeMiterLimit": 4,
        "strokeWidth": 1,
        "top": 0,
        "transformMatrix": null,
        "type": "rect",
        "version": "3.6.3",
        "visible": true,
        "width": 0,
      },
      "before": Array [],
      "id": 0,
    },
  ],
  "version": "3.6.3",
}
`;

exports[`test object modified undo and redo 1`] = `
Object {
  "historyStack": Array [
    Object {
      "action": "added",
      "after": Object {
        "angle": 0,
        "backgroundColor": "",
        "clipTo": null,
        "fill": "rgb(0,0,0)",
        "fillRule": "nonzero",
        "flipX": false,
        "flipY": false,
        "globalCompositeOperation": "source-over",
        "height": 10,
        "id": 0,
        "left": 0,
        "opacity": 1,
        "originX": "left",
        "originY": "top",
        "paintFirst": "fill",
        "rx": 0,
        "ry": 0,
        "scaleX": 1,
        "scaleY": 1,
        "shadow": null,
        "skewX": 0,
        "skewY": 0,
        "stroke": null,
        "strokeDashArray": null,
        "strokeDashOffset": 0,
        "strokeLineCap": "butt",
        "strokeLineJoin": "miter",
        "strokeMiterLimit": 4,
        "strokeWidth": 1,
        "top": 0,
        "transformMatrix": null,
        "type": "rect",
        "version": "3.6.3",
        "visible": true,
        "width": 10,
      },
      "before": Array [],
      "id": 0,
    },
  ],
  "id": 1,
  "objects": Array [
    Object {
      "angle": 0,
      "backgroundColor": "",
      "clipTo": null,
      "fill": "rgb(0,0,0)",
      "fillRule": "nonzero",
      "flipX": false,
      "flipY": false,
      "globalCompositeOperation": "source-over",
      "height": 10,
      "id": 0,
      "left": 0,
      "opacity": 1,
      "originX": "left",
      "originY": "top",
      "paintFirst": "fill",
      "rx": 0,
      "ry": 0,
      "scaleX": 1,
      "scaleY": 1,
      "shadow": null,
      "skewX": 0,
      "skewY": 0,
      "stroke": null,
      "strokeDashArray": null,
      "strokeDashOffset": 0,
      "strokeLineCap": "butt",
      "strokeLineJoin": "miter",
      "strokeMiterLimit": 4,
      "strokeWidth": 1,
      "top": 0,
      "transformMatrix": null,
      "type": "rect",
      "version": "3.6.3",
      "visible": true,
      "width": 10,
    },
  ],
  "redoStack": Array [],
  "version": "3.6.3",
}
`;

exports[`test object modified undo and redo 2`] = `
Object {
  "historyStack": Array [
    Object {
      "action": "added",
      "after": Object {
        "angle": 0,
        "backgroundColor": "",
        "clipTo": null,
        "fill": "rgb(0,0,0)",
        "fillRule": "nonzero",
        "flipX": false,
        "flipY": false,
        "globalCompositeOperation": "source-over",
        "height": 10,
        "id": 0,
        "left": 0,
        "opacity": 1,
        "originX": "left",
        "originY": "top",
        "paintFirst": "fill",
        "rx": 0,
        "ry": 0,
        "scaleX": 1,
        "scaleY": 1,
        "shadow": null,
        "skewX": 0,
        "skewY": 0,
        "stroke": null,
        "strokeDashArray": null,
        "strokeDashOffset": 0,
        "strokeLineCap": "butt",
        "strokeLineJoin": "miter",
        "strokeMiterLimit": 4,
        "strokeWidth": 1,
        "top": 0,
        "transformMatrix": null,
        "type": "rect",
        "version": "3.6.3",
        "visible": true,
        "width": 10,
      },
      "before": Array [],
      "id": 0,
    },
    Object {
      "action": "drag",
      "after": Array [
        Object {
          "left": 205.33,
        },
        Object {
          "top": 22.67,
        },
      ],
      "before": Array [
        Object {
          "left": 0,
        },
        Object {
          "top": 0,
        },
      ],
      "id": 0,
    },
  ],
  "id": 1,
  "objects": Array [
    Object {
      "angle": 0,
      "backgroundColor": "",
      "clipTo": null,
      "fill": "rgb(0,0,0)",
      "fillRule": "nonzero",
      "flipX": false,
      "flipY": false,
      "globalCompositeOperation": "source-over",
      "height": 10,
      "id": 0,
      "left": 0,
      "opacity": 1,
      "originX": "left",
      "originY": "top",
      "paintFirst": "fill",
      "rx": 0,
      "ry": 0,
      "scaleX": 1,
      "scaleY": 1,
      "shadow": null,
      "skewX": 0,
      "skewY": 0,
      "stroke": null,
      "strokeDashArray": null,
      "strokeDashOffset": 0,
      "strokeLineCap": "butt",
      "strokeLineJoin": "miter",
      "strokeMiterLimit": 4,
      "strokeWidth": 1,
      "top": 0,
      "transformMatrix": null,
      "type": "rect",
      "version": "3.6.3",
      "visible": true,
      "width": 10,
    },
  ],
  "redoStack": Array [],
  "version": "3.6.3",
}
`;

exports[`test object modified undo and redo 3`] = `
Object {
  "historyStack": Array [
    Object {
      "action": "added",
      "after": Object {
        "angle": 0,
        "backgroundColor": "",
        "clipTo": null,
        "fill": "rgb(0,0,0)",
        "fillRule": "nonzero",
        "flipX": false,
        "flipY": false,
        "globalCompositeOperation": "source-over",
        "height": 10,
        "id": 0,
        "left": 0,
        "opacity": 1,
        "originX": "left",
        "originY": "top",
        "paintFirst": "fill",
        "rx": 0,
        "ry": 0,
        "scaleX": 1,
        "scaleY": 1,
        "shadow": null,
        "skewX": 0,
        "skewY": 0,
        "stroke": null,
        "strokeDashArray": null,
        "strokeDashOffset": 0,
        "strokeLineCap": "butt",
        "strokeLineJoin": "miter",
        "strokeMiterLimit": 4,
        "strokeWidth": 1,
        "top": 0,
        "transformMatrix": null,
        "type": "rect",
        "version": "3.6.3",
        "visible": true,
        "width": 10,
      },
      "before": Array [],
      "id": 0,
    },
  ],
  "id": 1,
  "objects": Array [
    Object {
      "angle": 0,
      "backgroundColor": "",
      "clipTo": null,
      "fill": "rgb(0,0,0)",
      "fillRule": "nonzero",
      "flipX": false,
      "flipY": false,
      "globalCompositeOperation": "source-over",
      "height": 10,
      "id": 0,
      "left": 0,
      "opacity": 1,
      "originX": "left",
      "originY": "top",
      "paintFirst": "fill",
      "rx": 0,
      "ry": 0,
      "scaleX": 1,
      "scaleY": 1,
      "shadow": null,
      "skewX": 0,
      "skewY": 0,
      "stroke": null,
      "strokeDashArray": null,
      "strokeDashOffset": 0,
      "strokeLineCap": "butt",
      "strokeLineJoin": "miter",
      "strokeMiterLimit": 4,
      "strokeWidth": 1,
      "top": 0,
      "transformMatrix": null,
      "type": "rect",
      "version": "3.6.3",
      "visible": true,
      "width": 10,
    },
  ],
  "redoStack": Array [
    Object {
      "action": "drag",
      "after": Array [
        Object {
          "left": 205.33,
        },
        Object {
          "top": 22.67,
        },
      ],
      "before": Array [
        Object {
          "left": 0,
        },
        Object {
          "top": 0,
        },
      ],
      "id": 0,
    },
  ],
  "version": "3.6.3",
}
`;

exports[`test object modified undo and redo 4`] = `
Object {
  "historyStack": Array [
    Object {
      "action": "added",
      "after": Object {
        "angle": 0,
        "backgroundColor": "",
        "clipTo": null,
        "fill": "rgb(0,0,0)",
        "fillRule": "nonzero",
        "flipX": false,
        "flipY": false,
        "globalCompositeOperation": "source-over",
        "height": 10,
        "id": 0,
        "left": 0,
        "opacity": 1,
        "originX": "left",
        "originY": "top",
        "paintFirst": "fill",
        "rx": 0,
        "ry": 0,
        "scaleX": 1,
        "scaleY": 1,
        "shadow": null,
        "skewX": 0,
        "skewY": 0,
        "stroke": null,
        "strokeDashArray": null,
        "strokeDashOffset": 0,
        "strokeLineCap": "butt",
        "strokeLineJoin": "miter",
        "strokeMiterLimit": 4,
        "strokeWidth": 1,
        "top": 0,
        "transformMatrix": null,
        "type": "rect",
        "version": "3.6.3",
        "visible": true,
        "width": 10,
      },
      "before": Array [],
      "id": 0,
    },
    Object {
      "action": "drag",
      "after": Array [
        Object {
          "left": 205.33,
        },
        Object {
          "top": 22.67,
        },
      ],
      "before": Array [
        Object {
          "left": 0,
        },
        Object {
          "top": 0,
        },
      ],
      "id": 0,
    },
  ],
  "id": 1,
  "objects": Array [
    Object {
      "angle": 0,
      "backgroundColor": "",
      "clipTo": null,
      "fill": "rgb(0,0,0)",
      "fillRule": "nonzero",
      "flipX": false,
      "flipY": false,
      "globalCompositeOperation": "source-over",
      "height": 10,
      "id": 0,
      "left": 205.33,
      "opacity": 1,
      "originX": "left",
      "originY": "top",
      "paintFirst": "fill",
      "rx": 0,
      "ry": 0,
      "scaleX": 1,
      "scaleY": 1,
      "shadow": null,
      "skewX": 0,
      "skewY": 0,
      "stroke": null,
      "strokeDashArray": null,
      "strokeDashOffset": 0,
      "strokeLineCap": "butt",
      "strokeLineJoin": "miter",
      "strokeMiterLimit": 4,
      "strokeWidth": 1,
      "top": 22.67,
      "transformMatrix": null,
      "type": "rect",
      "version": "3.6.3",
      "visible": true,
      "width": 10,
    },
  ],
  "redoStack": Array [],
  "version": "3.6.3",
}
`;

exports[`test object set method 1`] = `
Object {
  "historyStack": Array [
    Object {
      "action": "added",
      "after": Object {
        "angle": 0,
        "backgroundColor": "",
        "clipTo": null,
        "fill": "rgb(0,0,0)",
        "fillRule": "nonzero",
        "flipX": false,
        "flipY": false,
        "globalCompositeOperation": "source-over",
        "height": 0,
        "id": 0,
        "left": 0,
        "opacity": 1,
        "originX": "left",
        "originY": "top",
        "paintFirst": "fill",
        "rx": 0,
        "ry": 0,
        "scaleX": 1,
        "scaleY": 1,
        "shadow": null,
        "skewX": 0,
        "skewY": 0,
        "stroke": null,
        "strokeDashArray": null,
        "strokeDashOffset": 0,
        "strokeLineCap": "butt",
        "strokeLineJoin": "miter",
        "strokeMiterLimit": 4,
        "strokeWidth": 1,
        "top": 0,
        "transformMatrix": null,
        "type": "rect",
        "version": "3.6.3",
        "visible": true,
        "width": 0,
      },
      "before": Array [],
      "id": 0,
    },
  ],
  "id": 1,
  "objects": Array [
    Object {
      "angle": 0,
      "backgroundColor": "",
      "clipTo": null,
      "fill": "rgb(0,0,0)",
      "fillRule": "nonzero",
      "flipX": false,
      "flipY": false,
      "globalCompositeOperation": "source-over",
      "height": 0,
      "id": 0,
      "left": 0,
      "opacity": 1,
      "originX": "left",
      "originY": "top",
      "paintFirst": "fill",
      "rx": 0,
      "ry": 0,
      "scaleX": 1,
      "scaleY": 1,
      "shadow": null,
      "skewX": 0,
      "skewY": 0,
      "stroke": null,
      "strokeDashArray": null,
      "strokeDashOffset": 0,
      "strokeLineCap": "butt",
      "strokeLineJoin": "miter",
      "strokeMiterLimit": 4,
      "strokeWidth": 1,
      "top": 0,
      "transformMatrix": null,
      "type": "rect",
      "version": "3.6.3",
      "visible": true,
      "width": 0,
    },
  ],
  "redoStack": Array [],
  "version": "3.6.3",
}
`;

exports[`test remove event undo and redo 1`] = `
Object {
  "historyStack": Array [
    Object {
      "action": "added",
      "after": Object {
        "angle": 0,
        "backgroundColor": "",
        "clipTo": null,
        "fill": "rgb(0,0,0)",
        "fillRule": "nonzero",
        "flipX": false,
        "flipY": false,
        "globalCompositeOperation": "source-over",
        "height": 0,
        "id": 0,
        "left": 0,
        "opacity": 1,
        "originX": "left",
        "originY": "top",
        "paintFirst": "fill",
        "rx": 0,
        "ry": 0,
        "scaleX": 1,
        "scaleY": 1,
        "shadow": null,
        "skewX": 0,
        "skewY": 0,
        "stroke": null,
        "strokeDashArray": null,
        "strokeDashOffset": 0,
        "strokeLineCap": "butt",
        "strokeLineJoin": "miter",
        "strokeMiterLimit": 4,
        "strokeWidth": 1,
        "top": 0,
        "transformMatrix": null,
        "type": "rect",
        "version": "3.6.3",
        "visible": true,
        "width": 0,
      },
      "before": Array [],
      "id": 0,
    },
    Object {
      "action": "removed",
      "after": Array [],
      "before": Object {
        "angle": 0,
        "backgroundColor": "",
        "clipTo": null,
        "fill": "rgb(0,0,0)",
        "fillRule": "nonzero",
        "flipX": false,
        "flipY": false,
        "globalCompositeOperation": "source-over",
        "height": 0,
        "id": 0,
        "left": 0,
        "opacity": 1,
        "originX": "left",
        "originY": "top",
        "paintFirst": "fill",
        "rx": 0,
        "ry": 0,
        "scaleX": 1,
        "scaleY": 1,
        "shadow": null,
        "skewX": 0,
        "skewY": 0,
        "stroke": null,
        "strokeDashArray": null,
        "strokeDashOffset": 0,
        "strokeLineCap": "butt",
        "strokeLineJoin": "miter",
        "strokeMiterLimit": 4,
        "strokeWidth": 1,
        "top": 0,
        "transformMatrix": null,
        "type": "rect",
        "version": "3.6.3",
        "visible": true,
        "width": 0,
      },
      "id": 0,
    },
  ],
  "id": 1,
  "objects": Array [],
  "redoStack": Array [],
  "version": "3.6.3",
}
`;

exports[`test remove event undo and redo 2`] = `
Object {
  "historyStack": Array [
    Object {
      "action": "added",
      "after": Object {
        "angle": 0,
        "backgroundColor": "",
        "clipTo": null,
        "fill": "rgb(0,0,0)",
        "fillRule": "nonzero",
        "flipX": false,
        "flipY": false,
        "globalCompositeOperation": "source-over",
        "height": 0,
        "id": 0,
        "left": 0,
        "opacity": 1,
        "originX": "left",
        "originY": "top",
        "paintFirst": "fill",
        "rx": 0,
        "ry": 0,
        "scaleX": 1,
        "scaleY": 1,
        "shadow": null,
        "skewX": 0,
        "skewY": 0,
        "stroke": null,
        "strokeDashArray": null,
        "strokeDashOffset": 0,
        "strokeLineCap": "butt",
        "strokeLineJoin": "miter",
        "strokeMiterLimit": 4,
        "strokeWidth": 1,
        "top": 0,
        "transformMatrix": null,
        "type": "rect",
        "version": "3.6.3",
        "visible": true,
        "width": 0,
      },
      "before": Array [],
      "id": 0,
    },
  ],
  "id": 1,
  "objects": Array [
    Object {
      "angle": 0,
      "backgroundColor": "",
      "clipTo": null,
      "fill": "rgb(0,0,0)",
      "fillRule": "nonzero",
      "flipX": false,
      "flipY": false,
      "globalCompositeOperation": "source-over",
      "height": 0,
      "id": 0,
      "left": 0,
      "opacity": 1,
      "originX": "left",
      "originY": "top",
      "paintFirst": "fill",
      "rx": 0,
      "ry": 0,
      "scaleX": 1,
      "scaleY": 1,
      "shadow": null,
      "skewX": 0,
      "skewY": 0,
      "stroke": null,
      "strokeDashArray": null,
      "strokeDashOffset": 0,
      "strokeLineCap": "butt",
      "strokeLineJoin": "miter",
      "strokeMiterLimit": 4,
      "strokeWidth": 1,
      "top": 0,
      "transformMatrix": null,
      "type": "rect",
      "version": "3.6.3",
      "visible": true,
      "width": 0,
    },
  ],
  "redoStack": Array [
    Object {
      "action": "removed",
      "after": Array [],
      "before": Object {
        "angle": 0,
        "backgroundColor": "",
        "clipTo": null,
        "fill": "rgb(0,0,0)",
        "fillRule": "nonzero",
        "flipX": false,
        "flipY": false,
        "globalCompositeOperation": "source-over",
        "height": 0,
        "id": 0,
        "left": 0,
        "opacity": 1,
        "originX": "left",
        "originY": "top",
        "paintFirst": "fill",
        "rx": 0,
        "ry": 0,
        "scaleX": 1,
        "scaleY": 1,
        "shadow": null,
        "skewX": 0,
        "skewY": 0,
        "stroke": null,
        "strokeDashArray": null,
        "strokeDashOffset": 0,
        "strokeLineCap": "butt",
        "strokeLineJoin": "miter",
        "strokeMiterLimit": 4,
        "strokeWidth": 1,
        "top": 0,
        "transformMatrix": null,
        "type": "rect",
        "version": "3.6.3",
        "visible": true,
        "width": 0,
      },
      "id": 0,
    },
  ],
  "version": "3.6.3",
}
`;
